Добавлено изменение цвета status bar для RecipeDetailViewController в виде: override var preferredStatusBarStyle: UIStatusBarStyle { return .lightContent     } Но пока это не срабатывает. Подозрение на баг в Xcode, который не отрабатывает exstensions. И в частности extension UINavigationController. Как лечить пока не представляю.

--- a/FoodPin/Info.plist
+++ b/FoodPin/Info.plist
@@ -64,5 +64,7 @@
 	<array>
 		<string>Rubik-Medium.ttf</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
