Решена проблема с цветом status bar. На экране RecipesTableViewController - темная тема, а на RecipeDetailViewController светлая.  UIApplication.shared.statusBarStyle = .lightContent

--- a/FoodPin/Info.plist
+++ b/FoodPin/Info.plist
@@ -65,6 +65,6 @@
 		<string>Rubik-Medium.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
